--- a/WPFApp/WpfAdvBank/WpfPracticeApp/WpfPracticeApp.csproj
+++ b/WPFApp/WpfAdvBank/WpfPracticeApp/WpfPracticeApp.csproj
@@ -161,6 +161,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="assets\PracticeTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Contact.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -182,9 +186,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="assets\Notifier.cs" />
-    <Compile Include="assets\ProductsFactory.cs" />
+    <Compile Include="BusinessLogic\ProductsFactory.cs" />
     <Compile Include="assets\RelayCommand.cs" />
-    <Compile Include="assets\Talk.cs" />
+    <Compile Include="BusinessLogic\Talk.cs" />
     <Compile Include="BusinessLogic\Car.cs" />
     <Compile Include="Contact.xaml.cs">
       <DependentUpon>Contact.xaml</DependentUpon>
@@ -199,6 +203,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PracticeTemplate.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Products.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
